[project]
name = "memory"
version = "0.0.1"
authors = [
    { name="Jason Wilkes", email="notarealdeveloper@gmail.com" },
]
description = "Unix disk cache for software 2.0"
dependencies = []

[project.urls]
source = "https://github.com/notarealdeveloper/memory"
download = "https://pypi.org/project/memory/#files"
