[project]
name = "mmry"
version = "0.0.5"
authors = [
    { name="Jason Wilkes", email="notarealdeveloper@gmail.com" },
]
description = "Unix disk cache for software 2.0"
dependencies = []

[project.urls]
source = "https://github.com/notarealdeveloper/mmry"
download = "https://pypi.org/project/mmry/#files"
